--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "rails-react-devise",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.0.2"
+    "@babel/preset-react": "^7.0.0",
+    "@rails/webpacker": "^4.0.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.3.1"
