--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "fstream": "^1.0.12",
     "lodash": "^4.17.13",
+    "lodash.template": "^4.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
